# bingo

./: .gitignore  README.md  install.ps1  install.sh  push.sh  pyproject.toml
bingo/: __init__.py  cli.py
bingo/core/: anti_hallucination.py  multi_agent.py  parallel_runner.py  rollback.py
bingo/lang/: strings.py
bingo/models/: base.py  prompt_cache.py  system_prompt.py
bingo/redteam/: session.py
bingo/redteam/phases/: 03_exploit.py  09_report.py
bingo/skills/: SKILLS_INDEX.md  engine.py  skills_data5.py
bingo/skills/api_security/: SKILL.md
bingo/skills/auth_attack/: SKILL.md
bingo/skills/local_skills/SecSkills-main/: SKILL.md
bingo/skills/local_skills/SecSkills-main/references/: evasion-shellcode.md  host-brute.md  info-dir-brute.md  info-fingerprint.md  info-osint.md  info-port-scan.md  info-subdomain.md  post-ad.md  post-credentials.md  post-linux-privesc.md  post-win-privesc.md  tools-fuzz.md  tools-hydra.md  tools-impacket.md  tools-msf.md  tools-nmap.md  tools-sqlmap.md  web-auth-logic.md  web-cache-poison.md  web-captcha.md  web-cors.md  web-crlf.md  web-deser.md  web-dir-traversal.md  web-graphql.md  web-host-header.md  web-http-smuggling.md  web-lfi-path.md  web-race-condition.md  web-rce.md  web-sqli.md  web-ssrf.md  web-ssti.md  web-upload.md  web-waf-bypass.md  web-xss.md  web-xxe.md
bingo/skills/local_skills/advsec-plus/: SKILL.md
bingo/skills/local_skills/advsec-plus/references/: api-security.md  cloud-security.md  evasion-advanced.md  mobile-security.md  supply-chain-devsec.md  web-advanced.md
bingo/skills/local_skills/api-unauth-fuzz/: SKILL.md
bingo/skills/local_skills/pentest-boundary/: SKILL.md
bingo/skills/local_skills/pentest-boundary/references/: authorization-checklist.md  emergency-response.md  rate-control-detail.md
bingo/skills/local_skills/skill-evolver/: SKILL.md
bingo/skills/local_skills/skill-evolver/references/: domain-gaps.md  evolution-log.md  false-positives.db.md  techniques.db.md
bingo/skills/sqli/: SKILL.md
bingo/skills/waf_bypass/: SKILL.md
bingo/skills/web_vuln/: SKILL.md
bingo/tools/: api_discovery.py  api_fuzzer.py  aruba_xxe.py  burp_engine.py  cloudflare_acme_bypass.py  copy_fail_lpe.py  downloader.py  executor.py  hash_crack.py  hash_lookup.py  html_autofill_steal.py  idor_scanner.py  ingress_nightmare_rce.py  installer.py  ivanti_sentry.py  login_executor.py  mssql2025.py  oauth_chain.py  panos_auth_bypass.py  redis_dark_replica.py  ruby_libafl_fuzz.py  waf_bypass.py  web_cache_deception.py
bingo/ui/: terminal.py
