[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bingo-ai"
version = "1.0.9"
description = "Hacker-style AI red team terminal — WAF bypass, hash crack, multi-model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "cli", "terminal", "llm", "pentest", "red-team", "hacker", "waf", "security"]
authors = [{ name = "bingook", email = "bingook@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlmap",
    "wafw00f",
]

[project.scripts]
bingo = "bingo.cli:main"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["bingo"]

[tool.hatch.build.targets.wheel.force-include]
"bingo/skills/local_skills" = "bingo/skills/local_skills"
